--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://ads-partners.coupang.com/g.js"></script>
+    <script>
+	    new PartnersCoupang.G({ id:251070 });
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -40,5 +44,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script data-ad-client="ca-pub-3060910560085801" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
   </body>
 </html>
