--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://ads-partners.coupang.com/g.js"></script>
     <script>
-	    new PartnersCoupang.G({ id:251070 });
+      new PartnersCoupang.G({ id:251070, width:'100%'});
     </script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -45,6 +46,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script data-ad-client="ca-pub-3060910560085801" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+    
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
   </body>
 </html>
