--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="finding appropriate lol-poisition"
-      content="Web site created finding appropriate lol-poisition"
+      name="description="
+      content="개인의 성향을 분석하여 적절한 롤 포지션을 추천해줍니다."
     />
+    <meta name="naver-site-verification" content="2defbb8012cd840e62830b9cc9bc9647bcd07bd9" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>LOL POSITION</title>
+    <title>LOL POSITION 분석</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
