--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description="
+      name="description"
       content="개인의 성향을 분석하여 적절한 롤 포지션을 추천해줍니다."
     />
     <meta name="naver-site-verification" content="2defbb8012cd840e62830b9cc9bc9647bcd07bd9" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="canonical" href="https://lol-position.netlify.app/">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
