--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="canonical" href="https://lol-position.netlify.app/">
 
+    <meta property="og:type" content="website"> 
+  <meta property="og:title" content="롤 포지션 분석">
+  <meta property="og:description" content="성향별 적절한 롤 포지션 추천">
+  <meta property="og:image" content="https://lol-position.netlify.app/img/lux.gif">
+  <meta property="og:url" content="https://lol-position.netlify.app/">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
