--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     <link rel="canonical" href="https://lol-position.netlify.app/">
 
     <meta property="og:type" content="website"> 
-  <meta property="og:title" content="롤 포지션 분석">
-  <meta property="og:description" content="성향별 적절한 롤 포지션 추천">
-  <meta property="og:image" content="https://lol-position.netlify.app/img/lux.gif">
-  <meta property="og:url" content="https://lol-position.netlify.app/">
+    <meta property="og:title" content="롤 포지션 분석">
+    <meta property="og:description" content="성향별 적절한 롤 포지션 추천">
+    <meta property="og:image" content="https://lol-position.netlify.app/img/lux.gif">
+    <meta property="og:url" content="https://lol-position.netlify.app/">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -35,7 +35,7 @@
     -->
     <title>LOL POSITION 분석</title>
   </head>
-  <body>
+  <body style="max-width: 720px; border: 0.5px solid darkgray;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://ads-partners.coupang.com/g.js"></script>
     <script>
@@ -59,5 +59,7 @@
     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ed746b735134eec"></script> -->
             
+
+
   </body>
 </html>
